--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.12",
+    "@angular/animations": "^12.0.0-next.2",
     "@angular/cdk": "^11.2.2",
-    "@angular/common": "8.2.12",
-    "@angular/compiler": "8.2.12",
-    "@angular/core": "8.2.12",
-    "@angular/forms": "8.2.12",
+    "@angular/common": "12.0.0-next.2",
+    "@angular/compiler": "12.0.0-next.2",
+    "@angular/core": "12.0.0-next.2",
+    "@angular/forms": "12.0.0-next.2",
     "@angular/material": "^11.2.2",
-    "@angular/platform-browser": "8.2.12",
-    "@angular/platform-browser-dynamic": "8.2.12",
-    "@angular/platform-server": "8.2.12",
-    "@angular/router": "8.2.12",
+    "@angular/platform-browser": "12.0.0-next.2",
+    "@angular/platform-browser-dynamic": "12.0.0-next.2",
+    "@angular/platform-server": "12.0.0-next.2",
+    "@angular/router": "12.0.0-next.2",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
@@ -31,25 +31,25 @@
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
-    "zone.js": "0.9.1"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.12",
+    "@angular-devkit/build-angular": "^0.1200.0-next.2",
+    "@angular/cli": "^12.0.0-next.2",
+    "@angular/compiler-cli": "^12.0.0-next.2",
+    "@angular/language-service": "^12.0.0-next.2",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.6",
     "codelyzer": "^5.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.2",
+    "karma": "^6.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "typescript": "3.5.3"
+    "typescript": "4.1.5"
   },
   "optionalDependencies": {
     "node-sass": "^4.12.0",
