--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "12.0.0-next.2",
     "@angular/compiler": "12.0.0-next.2",
     "@angular/core": "12.0.0-next.2",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "12.0.0-next.2",
     "@angular/material": "^11.2.2",
     "@angular/platform-browser": "12.0.0-next.2",
