--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     "BreakfastInBed": {
       "commandName": "Project",
       "launchBrowser": true,
+      //"applicationUrl": "https://localhost:5001",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
